--- a/MusicObjectDetector/requirements.txt
+++ b/MusicObjectDetector/requirements.txt
@@ -1,22 +1,22 @@
 # Use conda install ... to install these
 matplotlib
-Pillow >= 4.2.1
+Pillow>=4.2.1
 graphviz # for graphviz, installation via the system might be required, e.g. sudo apt-get install graphviz
 pytest
-protobuf == 3.4.0
+protobuf
 
 # Use pip install ... to install these
-tensorflow == 1.13.1
-# tensorflow-gpu == 1.13.1 # Alternatively if available to run vastly faster trainings. See https://github.com/philferriere/dlwin
+tensorflow==1.15.4
+# tensorflow-gpu == 1.15.4 # Alternatively if available to run vastly faster trainings. See https://github.com/philferriere/dlwin
 h5py
 scikit-learn
-scikit-image >= 0.14.2
-scipy >= 1.2.1
+scikit-image
+scipy
 sympy
 muscima >= 0.10.0
-numpy >= 1.16.2
+numpy==1.16.2
 lxml
 pydot
 tqdm
 opencv-python
-omrdatasettools >= 0.15
+omrdatasettools==1.3.1
